Updated HTTP Handlers
