# internal/server/http/helpers.go
@@ -13,6 +13,16 @@ import (
 
 type Book struct{}
 
+// Get Banner Rotation
+// getBannerRotation             godoc
+// @Summary      Get best banner for the slot and group (Bandit algorithm)
+// @Description  Get Banner Rotation
+// @Tags         Banner-Rotation
+// @Produce      json
+// @Param        slot_id    query     string  true  "slot id"
+// @Param        group_id    query     string  true  "slot id"
+// @Success      200
+// @Router       /banner-rotation [get] .
 func getBannerRotation(w http.ResponseWriter, r *http.Request, a app.Application) {
 	slotID, err := strconv.Atoi(r.URL.Query().Get("slot_id"))
 	if err != nil {
@@ -46,6 +56,15 @@ func getBannerRotation(w http.ResponseWriter, r *http.Request, a app.Application
 	w.Write(data)
 }
 
+// Add Banner Rotation
+// addBannerRotation             godoc
+// @Summary      Add Banner to a Slot
+// @Description  Add Banner Rotation
+// @Tags         Banner-Rotation
+// @Produce      json
+// @Param        banner_rotation  body    storage.Rotation  true  "JSON Baneer Rotation"
+// @Success      200
+// @Router       /banner-rotation [post] .
 func addBannerRotation(w http.ResponseWriter, r *http.Request, a app.Application) {
 	body, err := io.ReadAll(r.Body)
 	if err != nil {
@@ -72,6 +91,15 @@ func addBannerRotation(w http.ResponseWriter, r *http.Request, a app.Application
 	w.WriteHeader(http.StatusOK)
 }
 
+// Delete Banner Rotation
+// deleteBannerRotation             godoc
+// @Summary      Delete Banner from a Slot
+// @Description  Delete Banner Rotation
+// @Tags         Banner-Rotation
+// @Produce      json
+// @Param        banner_rotation  body    storage.Rotation  true  "JSON Baneer Rotation"
+// @Success      200
+// @Router       /banner-rotation [delete] .
 func deleteBannerRotation(w http.ResponseWriter, r *http.Request, a app.Application) {
 	body, err := io.ReadAll(r.Body)
 	if err != nil {
@@ -98,14 +126,41 @@ func deleteBannerRotation(w http.ResponseWriter, r *http.Request, a app.Applicat
 	w.WriteHeader(http.StatusOK)
 }
 
+// Add Banner
+// addBannerToDB             godoc
+// @Summary      Create New Banner
+// @Description  Responds with the instance with added baneer ID
+// @Tags         Banner
+// @Produce      json
+// @Param        banner  body  Item  true  "Banner JSON"
+// @Success      200  {array}  ItemResult
+// @Router       /banner [post].
 func addBanner(w http.ResponseWriter, r *http.Request, a app.Application) {
 	handleAddItem(w, r, a, "banner")
 }
 
+// Add Slot
+// addSlotToDB             godoc
+// @Summary      Create New Slot
+// @Description  Responds with the instance with added Slot ID
+// @Tags         Slot
+// @Produce      json
+// @Param        slot  body    Item  true  "SlotJSON"
+// @Success      200  {array}  ItemResult
+// @Router       /slot [post].
 func addSlot(w http.ResponseWriter, r *http.Request, a app.Application) {
 	handleAddItem(w, r, a, "slot")
 }
 
+// Add Group
+// addGroupToDB           godoc
+// @Summary      Create New Social Group
+// @Description  Responds with the instance with added baneer ID
+// @Tags         Social Group
+// @Produce      json
+// @Param        sosial_group body Item  true  "Social Group JSON"
+// @Success      200  {array}  ItemResult
+// @Router       /group [post].
 func addGroup(w http.ResponseWriter, r *http.Request, a app.Application) {
 	handleAddItem(w, r, a, "group")
 }
@@ -118,21 +173,31 @@ func handleAddItem(w http.ResponseWriter, r *http.Request, a app.Application, it
 		return
 	}
 
-	var item interface{}
+	var inputItem Item
+	err = json.Unmarshal(body, &inputItem)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write([]byte(err.Error()))
+		return
+	}
+
+	var id int
 
 	switch itemType {
 	case "slot":
-		item, err = addSlotToDB(w, a, body)
+		id, err = a.CreateSlot(context.Background(), inputItem.Descr)
 	case "group":
-		item, err = addGroupToDB(w, a, body)
+		id, err = a.CreateGroup(context.Background(), inputItem.Descr)
 	case "banner":
-		item, err = addBannerToDB(w, a, body)
+		id, err = a.CreateBanner(context.Background(), inputItem.Descr)
 	}
 
 	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write([]byte(err.Error()))
 		return
 	}
-	data, err := json.Marshal(item)
+	data, err := json.Marshal(ItemResult{ID: id})
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		w.Write([]byte(err.Error()))
@@ -143,90 +208,15 @@ func handleAddItem(w http.ResponseWriter, r *http.Request, a app.Application, it
 	w.Write(data)
 }
 
-// Add Slot
-// addSlotToDB             godoc
-// @Summary      Create New Slot
-// @Description  Responds with the instance with added Slot ID
-// @Tags         Slot
+// Add Banner Rotation
+// addBannerRotation             godoc
+// @Summary      Update Click Banner stat
+// @Description  Add Banner Rotation. Increase clicks count to one
+// @Tags         Banner-Rotation
 // @Produce      json
-// @Param        slot  body    storage.Slot  true  "SlotJSON(ID field could be empty for request)"
-// @Success      200  {array}  storage.Slot
-// @Router       /slot [post].
-func addSlotToDB(w http.ResponseWriter, a app.Application, body []byte) (storage.Slot, error) {
-	var slot storage.Slot
-	err := json.Unmarshal(body, &slot)
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		w.Write([]byte(err.Error()))
-		return storage.Slot{}, err
-	}
-
-	id, err := a.CreateSlot(context.Background(), slot.Descr)
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		w.Write([]byte(err.Error()))
-		return storage.Slot{}, err
-	}
-	slot.ID = id
-	return slot, nil
-}
-
-// Add Banner
-// addBannerToDB             godoc
-// @Summary      Create New Banner
-// @Description  Responds with the instance with added baneer ID
-// @Tags         Banner
-// @Produce      json
-// @Param        banner  body    storage.Banner  true  "Banner JSON(ID field could be empty for request)"
-// @Success      200  {array}  storage.Banner
-// @Router       /banner [post].
-func addBannerToDB(w http.ResponseWriter, a app.Application, body []byte) (storage.Banner, error) {
-	var banner storage.Banner
-	err := json.Unmarshal(body, &banner)
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		w.Write([]byte(err.Error()))
-		return storage.Banner{}, err
-	}
-
-	id, err := a.CreateBanner(context.Background(), banner.Descr)
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		w.Write([]byte(err.Error()))
-		return storage.Banner{}, err
-	}
-	banner.ID = id
-	return banner, nil
-}
-
-// Add Group
-// addGroupToDB           godoc
-// @Summary      Create New Social Group
-// @Description  Responds with the instance with added baneer ID
-// @Tags         Social Group
-// @Produce      json
-// @Param        sosial_group body storage.SosialGroup  true  "Social Group JSON(ID field could be empty for request)"
-// @Success      200  {array}  storage.SosialGroup
-// @Router       /group [post].
-func addGroupToDB(w http.ResponseWriter, a app.Application, body []byte) (storage.SosialGroup, error) {
-	var group storage.SosialGroup
-	err := json.Unmarshal(body, &group)
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		w.Write([]byte(err.Error()))
-		return storage.SosialGroup{}, err
-	}
-
-	id, err := a.CreateGroup(context.Background(), group.Descr)
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		w.Write([]byte(err.Error()))
-		return storage.SosialGroup{}, err
-	}
-	group.ID = id
-	return group, nil
-}
-
+// @Param        stat body Statistic  true  "JSON Banner Stat. Clicks c"
+// @Success      200
+// @Router       /banner-rotation [put] .
 func updateClickStat(w http.ResponseWriter, r *http.Request, a app.Application) {
 	body, err := io.ReadAll(r.Body)
 	if err != nil {
@@ -235,7 +225,7 @@ func updateClickStat(w http.ResponseWriter, r *http.Request, a app.Application) 
 		return
 	}
 
-	var stat storage.Statistic
+	var stat Statistic
 	err = json.Unmarshal(body, &stat)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
@@ -243,7 +233,11 @@ func updateClickStat(w http.ResponseWriter, r *http.Request, a app.Application) 
 		return
 	}
 
-	err = a.UpdateClickStat(context.Background(), stat)
+	err = a.UpdateClickStat(context.Background(), storage.Statistic{
+		BannerID:      stat.BannerID,
+		SlotID:        stat.SlotID,
+		SosialGroupID: stat.SocialGroupID,
+	})
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		w.Write([]byte(err.Error()))
